# components-test

./: .gitignore  CMakeLists.txt  main.cpp
.github/workflows/: build.yml  run-tests.yml
.tests/: CMakeLists.txt  destroyable.cpp  hash.cpp  test1.cpp
.tests/120_frames_test/: CMakeLists.txt  main.cpp
.tests/GameObject/: CMakeLists.txt  GameObject.cpp  MockComponents.hpp
.tests/GameObjectSystem/: CMakeLists.txt  MockObjects.hpp  main.cpp
.tests/GameObjectsManager/: CMakeLists.txt  main.cpp
.tests/SceneManager/: CMakeLists.txt  main.cpp
.tests/SystemLocator/: CMakeLists.txt  main.cpp
.tests/TimerComponent/: main.cpp
animation/: AnimatedSprite.cpp  Animation.cpp  Animation.hpp
components/: AnimatedSpriteComponent.hpp  BoardDisplayComponent.hpp  FollowCameraComponent.hpp  InputComponent.cpp  InputComponent.hpp  MotionComponent.hpp  RenderComponent.cpp  RenderComponent.hpp  SpriteComponent.cpp  SpriteComponent.hpp  TimerComponent.hpp  TransformComponent.hpp
components/src/: InputComponent.cpp  RenderComponent.cpp  SpriteComponent.cpp
core/: Component.hpp  Destroyable.hpp  GameObject.cpp  GameObject.hpp  GameObjectManager.hpp  GameObjectSystem.hpp  SceneManager.hpp  SceneSystem.hpp  System.hpp  SystemLocator.hpp
core/src/: GameObject.cpp
examples/: CMakeLists.txt
examples/fireball/: CMakeLists.txt  main.cpp
examples/fireball/components/: MotionComponent.hpp
examples/fireball/objects/: Dummy.hpp  FireBall.hpp  Player.hpp
examples/tic-tac-toe/: CMakeLists.txt  main.cpp
examples/tic-tac-toe/components/: BoardDisplayComponent.hpp
examples/tic-tac-toe/components/gui/: BottomInfoGuiComponent.hpp  GridGuiComponent.hpp
examples/tic-tac-toe/objects/: Board.hpp  Gui.hpp  Player.hpp
examples/tic-tac-toe/scenes/: GameScene.hpp
examples/tic-tac-toe/systems/: TurnSystem.hpp
objects/: Board.hpp  Dummy.hpp  FireBall.hpp  Player.hpp  temp_player.txt
physics/: BoxPhysicsComponent.hpp  CirclePhysicsComponent.hpp  PhysicsComponent.hpp  PhysicsDebugDraw.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  box2dComponent.hpp  box2dDebugDrawSFML.hpp  box2dSystem.cpp  box2dSystem.hpp
scenes/: GameScene.hpp
sfml_extentions/Animation/: AnimatedSprite.cpp  AnimatedSprite.hpp  Animation.cpp  Animation.hpp
sources/: CMakeLists.txt
sources/core/: SceneManager.hpp  System.hpp  SystemLocator.hpp
sources/core/animation/: Animation.cpp
sources/core/components/: AnimatedSpriteComponent.hpp  InputComponent.hpp  RenderComponent.hpp  SpriteComponent.hpp  TimerComponent.hpp  TransformComponent.hpp
sources/core/physics/: PhysicsComponent.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp
sources/core/systems/: GameObjectSystem.hpp  InputSystem.hpp  RenderSystem.cpp  RenderSystem.hpp
systems/: InputSystem.cpp  InputSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  TurnSystem.hpp
tests/: CMakeLists.txt  destroyable.cpp  hash.cpp
tests/GameObject/: MockComponents.hpp  main.cpp
tests/GameObjectSystem/: CMakeLists.txt  MockObjects.hpp  main.cpp
tests/SceneManager/: main.cpp
tests/SystemLocator/: main.cpp
tests/TimerComponent/: CMakeLists.txt  main.cpp
